[gd_scene load_steps=27 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/pieces.png" type="Texture" id=2]
[ext_resource path="res://assets/arrow_sheet.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 28, 21 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 28, 0, 28, 21 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 56, 0, 28, 21 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 84, 0, 28, 21 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 21, 28, 21 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 28, 21, 28, 21 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 56, 21, 28, 21 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 84, 21, 28, 21 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 0, 42, 28, 21 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 28, 42, 28, 21 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 56, 42, 28, 21 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 84, 42, 28, 21 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 0, 63, 28, 21 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 28, 63, 28, 21 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 56, 63, 28, 21 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 84, 63, 28, 21 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 0, 84, 28, 21 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 28, 84, 28, 21 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 56, 84, 28, 21 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 84, 84, 28, 21 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 16, 16 )

[node name="Player" type="StaticBody2D"]
z_index = 1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 2
hframes = 6
frame = 5

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Arrows" type="Node2D" parent="."]

[node name="Right" type="Area2D" parent="Arrows"]
position = Vector2( 64, 0 )

[node name="Sprite" type="AnimatedSprite" parent="Arrows/Right"]
frames = SubResource( 22 )
frame = 15
speed_scale = 5.0
playing = true

[node name="Shape" type="CollisionShape2D" parent="Arrows/Right"]
shape = SubResource( 23 )

[node name="Left" type="Area2D" parent="Arrows"]
position = Vector2( -64, 0 )

[node name="Sprite" type="AnimatedSprite" parent="Arrows/Left"]
rotation = 3.14159
frames = SubResource( 22 )
frame = 13
speed_scale = 5.0
playing = true

[node name="Shape" type="CollisionShape2D" parent="Arrows/Left"]
shape = SubResource( 23 )

[node name="Up" type="Area2D" parent="Arrows"]
position = Vector2( 0, -64 )

[node name="Sprite" type="AnimatedSprite" parent="Arrows/Up"]
rotation = -1.5708
frames = SubResource( 22 )
frame = 14
speed_scale = 5.0
playing = true

[node name="Shape" type="CollisionShape2D" parent="Arrows/Up"]
shape = SubResource( 23 )
[connection signal="body_entered" from="Arrows/Right" to="." method="_on_Right_body_entered"]
[connection signal="body_exited" from="Arrows/Right" to="." method="_on_Right_body_exited"]
[connection signal="input_event" from="Arrows/Right" to="." method="_on_Right_input_event"]
[connection signal="body_entered" from="Arrows/Left" to="." method="_on_Left_body_entered"]
[connection signal="body_exited" from="Arrows/Left" to="." method="_on_Left_body_exited"]
[connection signal="input_event" from="Arrows/Left" to="." method="_on_Left_input_event"]
[connection signal="body_entered" from="Arrows/Up" to="." method="_on_Up_body_entered"]
[connection signal="body_exited" from="Arrows/Up" to="." method="_on_Up_body_exited"]
[connection signal="input_event" from="Arrows/Up" to="." method="_on_Up_input_event"]
